src/core/api/qwebenginepage_p.h
@@ -197,7 +197,7 @@ public:
     void _q_webActionTriggered(bool checked);
 
     void createNewWindow(WindowOpenDisposition disposition, bool userGesture, const QUrl &targetUrl);
-    void adoptWebContents(QtWebEngineCore::WebContentsAdapter *webContents);
+    bool adoptWebContents(QtWebEngineCore::WebContentsAdapter *webContents);
     QtWebEngineCore::WebContentsAdapter *webContents() { return adapter.data(); }
     void recreateFromSerializedHistory(QDataStream &input);
 
